@@ -1,3 +1,5 @@
+# @configure_input@
+
 # Doxyfile 1.5.5
 
 # This file describes the settings to be used by the documentation system
