@@ -1,4 +1,4 @@
-#! /bin/bash
+#! /bin/sh
 
 echo "TEST: test_planner"
 
@@ -7,9 +7,13 @@ rm -fr lola/src/userconfig.H
 cp $testdir/nets/planner.userconfig.H.statepredicate lola/src/userconfig.H
 
 echo "  [2/3] compiling LoLA..."
-make clean all --silent --directory=lola > /dev/null
+$MAKE clean all --silent --directory=lola > /dev/null
 
 echo "  [3/3] running LoLA..."
-lola/src/lola $testdir/nets/planner.lola -a $testdir/nets/planner.task > /dev/null
+lola/src/lola $testdir/nets/planner.lola -a $testdir/nets/planner.task
 
-exit $?
+result=$?
+
+echo "  The result is $result."
+
+exit $result
