@@ -1,4 +1,4 @@
-#! /bin/bash
+#! /bin/sh
 
 echo "TEST: test_unbounded"
 
@@ -7,7 +7,7 @@ rm -fr lola/src/userconfig.H
 cp $testdir/nets/unbounded.userconfig.H.boundednet lola/src/userconfig.H
 
 echo "  [2/3] compiling LoLA..."
-make clean all --silent --directory=lola > /dev/null
+$MAKE clean all --silent --directory=lola > /dev/null
 
 echo "  [3/3] running LoLA..."
 lola/src/lola $testdir/nets/unbounded.lola > /dev/null
